<resources>
    <string name="app_name">HomeTask</string>
    <string name="home">主页</string>
    <string name="profile">我的</string>
    <string name="edit_profile">编辑资料</string>
    <string name="nick_name">昵称</string>
    <string name="gender">性别</string>
    <string name="unknown">未知</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="uid_description">UID</string>
    <string name="login_txt">登录</string>
    <string name="logout_txt">退出登录</string>
    <string name="prompt_uid">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="invalid_username">非法的用户名</string>
    <string name="invalid_password">密码长度应大于5个字符</string>
    <string name="login_failed">密码错误，请重新输入</string>
    <string name="welcome">欢迎</string>
    <string name="search_tips">搜索任意词</string>
    <string name="server_error">服务器出错了</string>
    <string name="server_error_tips_try_again">服务器出错了，请稍后再试</string>
    <string name="no_network_retry_2_words">重试</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="hint_nick_name">输入昵称...</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="choose_gender">选择性别</string>
</resources>