<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
            android:id="@+id/fl_avatar_container"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:background="@color/common_weak_hint_b9"
            app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
                android:layout_gravity="center"
                android:layout_width="89dp"
                android:layout_height="89dp">

            <com.hometask.widget.RoundImageView
                    android:id="@+id/iv_user_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_personal_center_default_avatar"
                    app:radius="45dp"/>

            <ImageView
                    android:id="@+id/iv_edit_avatar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:layout_gravity="bottom|end"
                    android:src="@drawable/icon_personal_edit_information" />
        </FrameLayout>

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_id_container"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/fl_avatar_container"
            android:layout_width="match_parent"
            android:layout_height="59dp">

        <TextView
                android:id="@+id/uid_des"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/d14_bold_black30_font"
                android:text="@string/uid_description"
                android:gravity="center|start"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        <TextView
                android:id="@+id/uid"
                android:gravity="end|center"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/black_99"
                android:text="123456"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_nickname_container"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/cl_id_container"
            android:layout_width="match_parent"
            android:layout_height="59dp">

        <TextView
                android:id="@+id/tv_nickname_des"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/d14_bold_black30_font"
                android:layout_marginStart="20dp"
                android:text="@string/nick_name"
                android:gravity="center|start"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />
        <TextView
                android:id="@+id/tv_edit_personal_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="60dp"
                android:singleLine="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="end"
                android:text="XXXX"
                android:textColor="@color/black_99"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:id="@+id/iv_edit_nickname_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/icon_set_up_list_arrow" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_gender"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/cl_nickname_container"
            android:layout_width="match_parent"
            android:layout_height="59dp">

        <TextView
                android:id="@+id/gender_des"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                style="@style/d14_bold_black30_font"
                android:text="@string/gender"
                android:gravity="center|start"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />
        <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                app:layout_constraintEnd_toStartOf="@id/iv_edit_expert_arrow"
                android:layout_marginEnd="5dp"
                android:text="@string/unknown"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/black_99"
                app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:id="@+id/iv_edit_expert_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/icon_set_up_list_arrow" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView android:id="@+id/bt_action"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/bt_selector"
            android:layout_margin="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/login_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>